--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectagram",
+  "name": "projectagram", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,13 +31,16 @@
     "slate-react": "^0.59.0",
     "slick-carousel": "^1.8.1",
     "subscriptions-transport-ws": "^0.9.16",
+    "uuid": "^7.0.1",
     "validator": "^13.5.2"
   },
   "scripts": {
-    "dev": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "react-scripts build",
+    "deploy": "npx now --target production"
   },
   "eslintConfig": {
     "extends": "react-app"
